# etcetera-compiler

./: Cargo.toml  README.md  example.etc
programs/: avg.etc  factorial.etc  fibonacci.etc
src/: ast.rs  compiler.rs  lexer.rs  main.rs  parser.rs  token.rs
