[package]
name = "etcetera"
version = "0.1.0"
edition = "2024"
description = "A Rust-based compiler project."
license = "GLP-3"
repository = "https://github.com/nomander17/etcetera-compiler"
readme = "README.md"
keywords = ["compiler", "llvm", "inkwell"]
categories = ["compilers", "development-tools"]
authors = ["Md Noman Khan <nomander17@gmail.com"]

[dependencies]
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
tempfile = "3.20.0"
